; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/kernel/extr_unwind.c_unw_valid.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/kernel/extr_unwind.c_unw_valid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.unw_frame_info = type { %struct.TYPE_4__, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { i64, i64 }
%struct.TYPE_3__ = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.unw_frame_info*, i64*)* @unw_valid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @unw_valid(%struct.unw_frame_info* %0, i64* %1) #0 {
  %3 = alloca %struct.unw_frame_info*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca i64, align 8
  store %struct.unw_frame_info* %0, %struct.unw_frame_info** %3, align 8
  store i64* %1, i64** %4, align 8
  %6 = load i64*, i64** %4, align 8
  %7 = ptrtoint i64* %6 to i64
  store i64 %7, i64* %5, align 8
  %8 = load i64, i64* %5, align 8
  %9 = load %struct.unw_frame_info*, %struct.unw_frame_info** %3, align 8
  %10 = getelementptr inbounds %struct.unw_frame_info, %struct.unw_frame_info* %9, i32 0, i32 1
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp uge i64 %8, %12
  br i1 %13, label %14, label %21

14:                                               ; preds = %2
  %15 = load i64, i64* %5, align 8
  %16 = load %struct.unw_frame_info*, %struct.unw_frame_info** %3, align 8
  %17 = getelementptr inbounds %struct.unw_frame_info, %struct.unw_frame_info* %16, i32 0, i32 1
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 1
  %19 = load i64, i64* %18, align 8
  %20 = icmp ult i64 %15, %19
  br i1 %20, label %37, label %21

21:                                               ; preds = %14, %2
  %22 = load i64, i64* %5, align 8
  %23 = load %struct.unw_frame_info*, %struct.unw_frame_info** %3, align 8
  %24 = getelementptr inbounds %struct.unw_frame_info, %struct.unw_frame_info* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = icmp uge i64 %22, %26
  br i1 %27, label %28, label %35

28:                                               ; preds = %21
  %29 = load i64, i64* %5, align 8
  %30 = load %struct.unw_frame_info*, %struct.unw_frame_info** %3, align 8
  %31 = getelementptr inbounds %struct.unw_frame_info, %struct.unw_frame_info* %30, i32 0, i32 0
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i32 0, i32 1
  %33 = load i64, i64* %32, align 8
  %34 = icmp ult i64 %29, %33
  br label %35

35:                                               ; preds = %28, %21
  %36 = phi i1 [ false, %21 ], [ %34, %28 ]
  br label %37

37:                                               ; preds = %35, %14
  %38 = phi i1 [ true, %14 ], [ %36, %35 ]
  %39 = zext i1 %38 to i32
  ret i32 %39
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
